# oco

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml  tsconfig.json
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: ADMIN_DASHBOARD_IMPLEMENTATION_PLAN.md  BOB_GOOGLE_CALENDAR_ROLLOUT.md  BOT_ACCESS_SETUP.md  CI_CD.md  CONFIGURATION_DETAILS.md  DATA_SOURCES_CONVENTION.md  DEPLOYMENT_RUNBOOK.md  E2E_OCO_DISCORD_FUNCTIONAL_AGENTS.md  E2E_OCO_DISCORD_MAESTRO.md  E2E_OCO_TELEGRAM.md  GOOGLE_CALENDAR_GWS_ROLLOUT.md  INTEGRATIONS_AND_USE_CASES.md  REQUIREMENTS.md  SOUL_TEMPLATES.md  TOOLS_TEMPLATES.md
inventory/: instances.example.yaml  instances.yaml  org.instances.example.yaml  schema.json
orchestrator/: __init__.py  agents.py  cli.py  compose_ops.py  context.py  errors.py  inventory.py  policy.py  render.py  revisions.py  utils.py  workflow.py
scripts/: add-agent.sh  deploy-instance.sh  oco.sh  org.sh  phase1-demo.sh  preflight-instance.sh  setup-bun.sh
src/: agents.ts  cli.ts  compose.ts  context.ts  deployment.ts  errors.ts  inventory.ts  kubernetes.ts  paths.ts  policy.ts  render.ts  revisions.ts  sessions.ts  soul.ts  tools.ts  types.ts  utils.ts  workflow.ts
tests/: admin-api.test.ts  admin-stack.test.ts  admin-store.test.ts  agents.test.ts  apply-protected-group-reply-suppression.test.ts  compose.test.ts  deployment.test.ts  inventory.test.ts  kubernetes.test.ts  policy.test.ts  render.test.ts  revisions.test.ts  sessions.test.ts  soul.test.ts  telegram-group-allowlist-guard.test.ts  tools.test.ts  (+1 more)
(+65 files in other folders)
